# ki

./: .actrc  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Improved Plan: Anki-Ki Git Sync Addon.md  README.md  build.py  config.json  pyproject.toml
.github/workflows/: ci.yml
anki_git/: __init__.py  addon.py  config.json  config.py  manifest.json  meta.json
anki_git/engine/: checksums.py  conflict.py  constants.py  diff.py  export_helpers.py  exporter.py  git_ops.py  import_helpers.py  importer.py  sync.py
anki_git/formats/: media.py  notes_md.py  notetype_yaml.py
anki_git/ui/: __init__.py  conflicts.py  diff.py  history.py  progress.py  settings.py  utils.py
docs/: ankiweb_description.md  architecture.md
ki_addon/: __init__.py  addon.py  config.json  manifest.json  meta.json
ki_addon/engine/: conflict.py  exporter.py  git_ops.py  importer.py
ki_addon/formats/: notes_md.py  notetype_yaml.py
ki_addon/ui/: __init__.py  conflicts.py  progress.py  settings.py
scripts/: release.py
tests/: conftest.py  repro_import_issue.py  smoke_anki_launch.sh  test_addon_smoke.py  test_checksums.py  test_config.py  test_conflict.py  test_conflicts_ui.py  test_diff.py  test_exporter.py  test_git_ops.py  test_import_helpers.py  test_importer.py  test_media.py  test_notes_md.py  test_notetype_yaml.py  test_settings_ui.py  test_sync.py  test_utils.py
