[project]
name = "anki-git"
version = "0.1.0"
description = "Git-based version control for Anki collections"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.30",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.1.1",
    "flake8>=7.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests that require a real Anki runtime",
]
filterwarnings = []
addopts = "-ra -q"

