[project]
name = "anki-git"
version = "0.1.0"
description = "Git-based version control for Anki collections"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.30",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.0",
    "pyright>=1.1.409",
    "anki>=25.9.4",
    "aqt>=25.9.4",
]

[tool.ruff]
line-length = 100
exclude = [".venv", ".git", "__pycache__", "build", "vendor"]
target-version = "py313"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests that require a real Anki runtime",
]
filterwarnings = []
addopts = "-ra -q"

[tool.pyright]
include = ["anki_git", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "standard"
reportMissingTypeStubs = "none"
reportMissingParameterType = "warning"
reportOptionalCall = "warning"
reportUnusedVariable = "warning"
reportUnknownParameterType = "warning"
reportMissingTypeArgs = "none"

