[project]
name = "anki-git"
version = "0.1.5"
description = "Git-based version control for Anki collections"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.30",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.0",
    "pyright>=1.1.409",
    "anki>=25.9.4",
    "aqt>=25.9.4",
]

[tool.ruff]
line-length = 100
exclude = [".venv", ".git", "__pycache__", "build", "vendor"]
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "UP", "I", "N", "SIM"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests that require a real Anki runtime",
]
filterwarnings = []
addopts = "-ra -q"

[tool.pyright]
include = ["anki_git", "tests"]
exclude = ["**/__pycache__"]
typeCheckingMode = "standard"
reportMissingTypeStubs = "none"
reportMissingParameterType = "warning"
reportOptionalCall = "warning"
reportUnusedVariable = "warning"
reportUnknownParameterType = "warning"
reportMissingImports = "none"

